k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-prod
  labels:
    env: production
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
