k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-svc
  namespace: web-prod
  labels:
    app: web-app
spec:
  type: ClusterIP

  selector:
    app: web-app

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
